--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,29 @@
 *		 	Salban Kurayuktuizzzuu and Daniel Graungaard			*
 *								v.0.2								*
 ********************************************************************/
-/*Genral setup*/
+/*Genenral setup*/
 body{
-	background-color: #CCCCCC; 
+	background-color: #EBEBEB; 
 	font-family: 'Calligraffitti', cursive;
 }
+
+#wrapper{
+
+	background-color: #ffffff;
+	width: 100%; 
+	padding: 20px; 
+
+	overflow: hidden;
+	
+}
+
+#uberwrapper{
+	box-shadow: 10px 10px 80px 5px #A6A6A6;
+	width: 1260px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
 
 a{color: #94B0FF; text-decoration: none;}
 
@@ -28,36 +46,72 @@ a:hover{color: #0546FA; text-decoration: underline;}
 	list-style-type: none; 
 	text-align: center; 
 	font-size: 2em; 
-	font-family: Helvetica, Arial, Verdana; 
-	background-color: #3CABF0; 
-	margin: 20px 0px 20px 0px; 
-	height: 50px;
-	padding: 1.25% 0;
-	}
+	font-family: Helvetica, Arial, Verdana;
 
-#nav li{display: inline;}
+}
 
-#nav li:hover{background-color: #90C;}
+#content{
+
+	clear:both;
+	margin-top: 100px;
+	width: 1182px;
+	margin-right: auto;
+	margin-left: auto;
+	overflow: hidden
+
+}
+
+#nav li{display: inline; margin: 0; float: left;}
+
 
 
 #nav a{
 	display: inline-block; 
 	padding-left: 5px;
 	padding-right: 5px; 
-	margin: 0px
+	background: url(../images/menu-bg-big.png) top left repeat-x;
+	height: 50px;	
+	margin: 0;
+	padding:0 25px 0 25px; 
+}
+
+a.last{
+	border-radius: 0px 10px 10px 0px;
+}
+a.first{
+	border-radius: 10px 0px 0px 10px;
+}
+
+
+
+#nav a:hover{
+	background: url(../images/menu-bg-big.png) bottom left repeat-x;
+	text-decoration: none;
+	color: pink	;
 }
 
 #nav ul{
-	height: 20px;
-	padding: 2.5% 0;
 }
 
-#wrapper{
 
-	background-color: #ffffff;
-	width: 1260px; 
-	padding: 20px; 
-	margin-left: auto; 
-	margin-right: auto
+#banner{
+	width:1182px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
+
+#footer{
+	background-color: #BDBDBD;
+	width: 100%;
+	text-align: center;
+	padding: 20px;
+}
+
+.strangetext{
+
+color: red;
+font-weight: bolder;
+
+
+}
