--- a/TomcatServer/WebContent/css/backend.css
+++ b/TomcatServer/WebContent/css/backend.css
@@ -1,21 +1,55 @@
-a {color:#000}
+a {
+	color: #000
+}
 
-a:hover{color: #33CCFF;}
+a:hover {
+	color: #33CCFF;
+}
 
-table{
-	border: solid;
+
+#createlink{
+	color:#fefefe;
+	display: block;
+	text-align: center;
+	font-size: 3em;
+	font-family: arial;
+	
+	
 	
 }
 
-td{
+table {
+	width: 1500px;
+	margin-left: auto;
+	margin-right: auto;
+	border: solid;
+	text-align: center;
+	vertical-align: middle;
+}
+
+td {
 	border-bottom-style: dotted;
-	border-bottom-width: 1px; 
+	border-bottom-width: 1px;
 	padding: 5px;
 	word-wrap: break-word;
+}
+
+input,textarea {
+	display: block;
+	width: 200px;
 	
 }
 
+label{
+	display: block;
+	float:left;
+	
+}
 
-
+#desclabel{
+	
+	float:none;
+	
+}
 
 
